--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>SKM SUPERMARKET</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+<!-- PAGE BACKGROUND OVERLAY -->
+<div class="page-bg"></div>
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -29,10 +33,12 @@
     <h3>🥬 Fresh Items / புதிய பொருட்கள்</h3>
     <p>Daily fresh vegetables & fruits / தினசரி புதிய காய்கறி மற்றும் பழங்கள்</p>
   </div>
+
   <div class="feature-card">
     <h3>💰 Best Prices / சிறந்த விலை</h3>
     <p>Affordable prices for everyone / அனைவருக்கும் பொருத்தமான விலை</p>
   </div>
+
   <div class="feature-card">
     <h3>📍 Local Store / உள்ளூர் கடை</h3>
     <p>Visit us anytime / எப்போது வேண்டுமானாலும் வரலாம்</p>
@@ -41,7 +47,7 @@
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2026 SKM SUPERMARKET. All rights reserved.</p>
+  <p>© 2025 SKM SUPERMARKET.</p>
 </footer>
 
 </body>
