--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
 
-<!-- PAGE BACKGROUND OVERLAY -->
-<div class="page-bg"></div>
-
 <!-- NAVBAR -->
 <header class="navbar">
   <h1>🛒 SKM SUPERMARKET</h1>
@@ -47,7 +44,7 @@
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2025 SKM SUPERMARKET.</p>
+  <p>© 2025 SKM SUPERMARKET</p>
 </footer>
 
 </body>
