--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Products - SKM SUPERMARKET</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,24 +21,28 @@
 <!-- PRODUCTS SECTION -->
 <section class="products-section">
   <h2>Categories / பிரிவுகள்</h2>
-  
+
   <div class="categories-container">
     <div class="category-card">
       <img src="images/fruits.jpg" alt="Fruits / பழங்கள்">
       <button onclick="showCategory('Fruits')">Fruits / பழங்கள்</button>
     </div>
+
     <div class="category-card">
       <img src="images/vegetables.jpg" alt="Vegetables / காய்கறிகள்">
       <button onclick="showCategory('Vegetables')">Vegetables / காய்கறிகள்</button>
     </div>
+
     <div class="category-card">
-      <img src="images/groceries.jpg" alt="Groceries / கிரொசரி பொருட்கள்">
-      <button onclick="showCategory('Groceries')">Groceries / கிரொசரி பொருட்கள்</button>
+      <img src="images/groceries.jpg" alt="Groceries / கிரொசரி">
+      <button onclick="showCategory('Groceries')">Groceries / கிரொசரி</button>
     </div>
+
     <div class="category-card">
       <img src="images/dairy.jpg" alt="Dairy / பால் பொருட்கள்">
       <button onclick="showCategory('Dairy')">Dairy / பால் பொருட்கள்</button>
     </div>
+
     <div class="category-card">
       <img src="images/household.jpg" alt="Household / வீட்டு பொருட்கள்">
       <button onclick="showCategory('Household')">Household / வீட்டு பொருட்கள்</button>
@@ -45,7 +50,7 @@
   </div>
 
   <div id="categoryInfo" class="category-info">
-    <!-- Category description will appear here -->
+    Select a category to see details
   </div>
 </section>
 
