--- a/products.html
+++ b/products.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
-<!-- NAVBAR -->
+<body class="bg-image">
+
 <header class="navbar">
   <h1>🛒 SKM SUPERMARKET</h1>
   <nav>
@@ -18,40 +18,39 @@
   </nav>
 </header>
 
-<!-- PRODUCTS SECTION -->
 <section class="products-section">
   <h2>Categories / பிரிவுகள்</h2>
 
   <div class="categories-container">
+
     <div class="category-card">
-      <img src="images/fruits.jpg" alt="Fruits / பழங்கள்">
+      <img src="images/fruits.jpg">
       <button onclick="showCategory('Fruits')">Fruits / பழங்கள்</button>
     </div>
 
     <div class="category-card">
-      <img src="images/vegetables.jpg" alt="Vegetables / காய்கறிகள்">
+      <img src="images/vegetables.jpg">
       <button onclick="showCategory('Vegetables')">Vegetables / காய்கறிகள்</button>
     </div>
 
     <div class="category-card">
-      <img src="images/groceries.jpg" alt="Groceries / கிரொசரி">
-      <button onclick="showCategory('Groceries')">Groceries / கிரொசரி</button>
+      <img src="images/groceries.jpg">
+      <button onclick="showCategory('Groceries')">Groceries / கிரொசரி பொருட்கள்</button>
     </div>
 
     <div class="category-card">
-      <img src="images/dairy.jpg" alt="Dairy / பால் பொருட்கள்">
+      <img src="images/dairy.jpg">
       <button onclick="showCategory('Dairy')">Dairy / பால் பொருட்கள்</button>
     </div>
 
     <div class="category-card">
-      <img src="images/household.jpg" alt="Household / வீட்டு பொருட்கள்">
+      <img src="images/household.jpg">
       <button onclick="showCategory('Household')">Household / வீட்டு பொருட்கள்</button>
     </div>
+
   </div>
 
-  <div id="categoryInfo" class="category-info">
-    Select a category to see details
-  </div>
+  <div id="categoryInfo" class="category-info"></div>
 </section>
 
 <script src="js/products.js"></script>
