--- a/products.html
+++ b/products.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="bg-image">
+<!-- 👇 Special class added ONLY here -->
+<body class="products-page">
 
+<!-- NAVBAR -->
 <header class="navbar">
   <h1>🛒 SKM SUPERMARKET</h1>
   <nav>
@@ -18,34 +20,35 @@
   </nav>
 </header>
 
+<!-- PRODUCTS SECTION -->
 <section class="products-section">
   <h2>Categories / பிரிவுகள்</h2>
 
   <div class="categories-container">
 
     <div class="category-card">
-      <img src="images/fruits.jpg">
+      <img src="images/fruits.jpg" alt="Fruits">
       <button onclick="showCategory('Fruits')">Fruits / பழங்கள்</button>
     </div>
 
     <div class="category-card">
-      <img src="images/vegetables.jpg">
+      <img src="images/vegetables.jpg" alt="Vegetables">
       <button onclick="showCategory('Vegetables')">Vegetables / காய்கறிகள்</button>
     </div>
 
     <div class="category-card">
-      <img src="images/groceries.jpg">
-      <button onclick="showCategory('Groceries')">Groceries / கிரொசரி பொருட்கள்</button>
+      <img src="images/groceries.jpg" alt="Groceries">
+      <button onclick="showCategory('Groceries')">Groceries / கிரொசரி</button>
     </div>
 
     <div class="category-card">
-      <img src="images/dairy.jpg">
-      <button onclick="showCategory('Dairy')">Dairy / பால் பொருட்கள்</button>
+      <img src="images/dairy.jpg" alt="Dairy">
+      <button onclick="showCategory('Dairy')">Dairy / பால்</button>
     </div>
 
     <div class="category-card">
-      <img src="images/household.jpg">
-      <button onclick="showCategory('Household')">Household / வீட்டு பொருட்கள்</button>
+      <img src="images/household.jpg" alt="Household">
+      <button onclick="showCategory('Household')">Household / வீட்டு</button>
     </div>
 
   </div>
